--- a/default.properties
+++ b/default.properties
@@ -8,5 +8,5 @@
 # project structure.
 
 # Project target.
-target=android-8
-android.library.reference.1=../android-rss
+target=android-7
+android.library.reference.1=../libs/android-rss
