--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,6 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".view.Archive"/>
 		<service android:name=".service.DownloadService" android:exported="false"></service>        
 
     </application>
