--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,8 @@
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="7" />
 
-    <application android:icon="@drawable/lipstick" android:label="@string/app_name" android:theme="@android:style/Theme.Light">
+    <application android:name=".service.CustomApplication" 
+    	android:icon="@drawable/lipstick" android:label="@string/app_name" android:theme="@android:style/Theme.Light">
     
         <provider android:name=".provider.ReaderArchiveProvider"
             android:authorities="cn.zadui.provider.ReaderArchive"
