update dialog texts

--- a/default.properties
+++ b/default.properties
@@ -10,3 +10,5 @@
 # Project target.
 target=android-7
 android.library.reference.1=../libs/android-rss
+key.store=/Users/david/.android/hgh.key
+key.alias=david huang key
