move external lib into project then can use lower level android sdk. hotfix that new version dialog will popped up even after upgrated to the last build

--- a/default.properties
+++ b/default.properties
@@ -8,7 +8,7 @@
 # project structure.
 
 # Project target.
-target=android-7
-android.library.reference.1=../libs/android-rss
-key.store=/Users/david/.android/hgh.key
-key.alias=david huang key
+target=android-4
+#android.library.reference.1=../libs/android-rss
+key.store=/Users/david/.android/HuangGehua-release-key.keystore
+key.alias=hgh
